Adding yolo object detection model backbone

--- a/notebooks/Model_Training_with_Attention.ipynb
+++ b/notebooks/Model_Training_with_Attention.ipynb
@@ -61,7 +61,12 @@
     "\n",
     "- CAFormer\n",
     "- EfficientNetV2M\n",
-    "- VOLO"
+    "- VOLO\n",
+    "- **Dino v2 base and large (base weights are downloaded)\n",
+    "\n",
+    "### Try using object detection pretrained model\n",
+    "\n",
+    "- YOLO"
    ]
   },
   {
@@ -88,8 +93,8 @@
    },
    "outputs": [],
    "source": [
-    "TARGET_HEIGHT = 512\n",
-    "TARGET_WIDTH = 512"
+    "TARGET_HEIGHT = 640\n",
+    "TARGET_WIDTH = 640"
    ]
   },
   {
@@ -837,7 +842,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = 'maxvit_base_512_imagenet21k-ft1k.h5'\n",
+    "MODEL_BASE_NAME = 'yolov8_x6'\n",
+    "MODEL_NAME = f'{MODEL_BASE_NAME}_coco.h5'\n",
     "model_path = f'../models/{MODEL_NAME}'\n",
     "model = tf.keras.models.load_model(model_path)"
    ]
@@ -989,8 +995,33 @@
    "outputs": [],
    "source": [
     "# # Note: these were used to train MaxViT_Small\n",
-    "transfer_layer_name = 'stack_4_block_2/grid_ffn_output'\n",
-    "transfer_layer = model.get_layer(transfer_layer_name)"
+    "# transfer_layer_name = 'stack_4_block_2/grid_ffn_output'\n",
+    "# transfer_layer = model.get_layer(transfer_layer_name)\n",
+    "# freeze_layer_name = 'stack_4_block_2/grid_ffn_output'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Note: these were used to train YOLOV8 X\n",
+    "# transfer_layer_name = 'tf.concat_15'\n",
+    "# transfer_layer = model.get_layer(transfer_layer_name)\n",
+    "# freeze_layer_name = 'tf.concat_15'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Note: these were used to train YOLOV8 X6\n",
+    "transfer_layer_name = 'tf.concat_45'\n",
+    "transfer_layer = model.get_layer(transfer_layer_name)\n",
+    "freeze_layer_name = 'head_4_cls_3_conv'"
    ]
   },
   {
@@ -1011,6 +1042,61 @@
    "outputs": [],
    "source": [
     "conv_model = tf.keras.Model(inputs=model.input, outputs=transfer_layer.output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 ideas for adapting YOLO:\n",
+    "1. Just do pooling/flatten and then concatenate the various levels of granularity\n",
+    "2. Add convolution/pooling layers to get everything to match the same dimension then do pooling/flatten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_yolo_model(base_model, num_classes, dropout_rate=0):\n",
+    "    # Get the output of the base model on which we will build\n",
+    "    x_80 = base_model.get_layer('tf.concat_41')\n",
+    "    x_40 = base_model.get_layer('tf.concat_42')\n",
+    "    x_20 = base_model.get_layer('tf.concat_43')\n",
+    "    x_10 = base_model.get_layer('tf.concat_44')\n",
+    "    \n",
+    "    x_80 = layers.AveragePooling2D((2,2), name='local_avg_pool_80')(x_80.output)\n",
+    "    x_40 = layers.AveragePooling2D((2,2), name='local_avg_pool_40')(x_40.output)\n",
+    "    x_20 = layers.AveragePooling2D((2,2), name='local_avg_pool_20')(x_20.output)\n",
+    "    x_10 = layers.AveragePooling2D((2,2), name='local_avg_pool_10')(x_10.output)\n",
+    "    \n",
+    "    x_80 = layers.Flatten(name='flatten_80')(x_80)\n",
+    "    x_40 = layers.Flatten(name='flatten_40')(x_40)\n",
+    "    x_20 = layers.Flatten(name='flatten_20')(x_20)\n",
+    "    x_10 = layers.Flatten(name='flatten_10')(x_10)\n",
+    "\n",
+    "    x_80 = keras.layers.Dropout(dropout_rate)(x_80)\n",
+    "    x_40 = keras.layers.Dropout(dropout_rate)(x_40)\n",
+    "    x_20 = keras.layers.Dropout(dropout_rate)(x_20)\n",
+    "    x_10 = keras.layers.Dropout(dropout_rate)(x_10)\n",
+    "    \n",
+    "    x = tf.concat([x_80, x_40, x_20, x_10], axis=-1)\n",
+    "        \n",
+    "    x = layers.Dense(num_classes, activation='sigmoid', name='prediction')(x)\n",
+    "\n",
+    "    # Create model.\n",
+    "    model = tf.keras.Model(base_model.input, x, name='Xception')\n",
+    "    return model"
    ]
   },
   {
@@ -1156,7 +1242,7 @@
    "outputs": [],
    "source": [
     "# Ideally retrain the entire model, but memory is constrained \n",
-    "# freeze_layers(conv_model, freeze_layer_name)"
+    "freeze_layers(conv_model, freeze_layer_name)"
    ]
   },
   {
@@ -1167,7 +1253,8 @@
    },
    "outputs": [],
    "source": [
-    "model = build_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)"
+    "# model = build_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)\n",
+    "model = build_yolo_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)"
    ]
   },
   {
@@ -1178,7 +1265,7 @@
    },
    "outputs": [],
    "source": [
-    "# model.summary()"
+    "model.summary()"
    ]
   },
   {
@@ -1189,7 +1276,7 @@
    },
    "outputs": [],
    "source": [
-    "unfreeze_batch_norm(model)"
+    "# unfreeze_batch_norm(model)"
    ]
   },
   {
@@ -1200,7 +1287,7 @@
    },
    "outputs": [],
    "source": [
-    "unfreeze_layer_norm(model)"
+    "# unfreeze_layer_norm(model)"
    ]
   },
   {
@@ -1329,10 +1416,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "batch_size = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lr_schedule = keras.optimizers.schedules.CosineDecayRestarts(\n",
     "      # initial_learning_rate=3e-3, # for uniform weighting\n",
     "      # initial_learning_rate=3e-4, # for sqrt weighting \n",
-    "      initial_learning_rate=1e-5, # lower learning rate for Lion optimizer\n",
+    "      initial_learning_rate=2e-5, # lower learning rate for Lion optimizer\n",
     "      first_decay_steps=int(NUM_TRAIN/ (7 * batch_size)))"
    ]
   },
@@ -1356,13 +1452,12 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 20\n",
-    "batch_size = 2\n",
-    "model_path='./serialized_models/pretrain_model_MaxViT_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
+    "epochs = 10\n",
+    "model_path='../models/pretrain_model_yolov8_x6_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
     "\n",
     "callbacks = [\n",
-    "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=True),\n",
-    "    tf.keras.callbacks.EarlyStopping(patience=10)\n",
+    "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=False),\n",
+    "#     tf.keras.callbacks.EarlyStopping(patience=10)\n",
     "]\n",
     "model.compile(\n",
     "#     optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule),\n",
@@ -1385,18 +1480,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SwinV2: 1000/111707: loss: 1.446, accuracy: 0.0624\n",
-    "SwinV2: 8000/111707: loss: 1.376, accuracy: 0.0392\n",
-    "CoAtNet2: 1000/111707: loss: 1.468, accuracy: 0.0750\n",
-    "CoAtNet2: 4200/111707: loss: 1.371, accuracy: 0.0840\n",
-    "NFNet (w/ Lion): 500/55853: loss: 1.465, accuracy: 0.0319\n",
-    "NFNet (w/ Lion): 2100/55853: loss: 1.37, accuracy: 0.0433\n",
-    "NFNet (w/ Lion): 4673/55853: loss: 1.33, accuracy: 0.0596\n",
-    "MaxViT (w/ Lion): 500/111707: loss: 1.465, accuracy: 0.0319\n",
-    "MaxViT (w/ Lion): 5500/111707: loss: 1.247, accuracy: 0.1242\n",
-    "MaxViT (w/ Lion): 13500/111707: loss: 1.196, accuracy: 0.15\n",
+    "- SwinV2: 1000/111707: loss: 1.446, accuracy: 0.0624\n",
+    "- SwinV2: 8000/111707: loss: 1.376, accuracy: 0.0392\n",
+    "- CoAtNet2: 1000/111707: loss: 1.468, accuracy: 0.0750\n",
+    "- CoAtNet2: 4200/111707: loss: 1.371, accuracy: 0.0840\n",
+    "- NFNet (w/ Lion): 500/55853: loss: 1.465, accuracy: 0.0319\n",
+    "- NFNet (w/ Lion): 2100/55853: loss: 1.37, accuracy: 0.0433\n",
+    "- NFNet (w/ Lion): 4673/55853: loss: 1.33, accuracy: 0.0596\n",
+    "- MaxViT Small (w/ Lion) 640, norm layers unfrozen 1e-5 lr: 500/111707: loss: 1.465, accuracy: 0.0319\n",
+    "- MaxViT Small (w/ Lion) 640, norm layers unfrozen 1e-5 lr: 5500/111707: loss: 1.247, accuracy: 0.1242\n",
+    "- MaxViT Small (w/ Lion) 640, norm layers unfrozen 1e-5 lr: 13500/111707: loss: 1.196, accuracy: 0.15\n",
     "\n",
-    "Old convnet: 13300/55853, loss: 0.3006, accuracy: 0.2011"
+    "- MaxViT Base (w/ Lion) 512 imagenet21k weights, log class weights, norm layers frozen 3e-5 lr: 3000/55853: loss: 1.0627, accuracy: 0.0976\n",
+    "- MaxViT Base (w/ Lion) 512 imagenet21k weights, log class weights, norm layers unfrozen 1e-5 lr: 4000/74471: loss: 1.4759, accuracy: 0.1263\n",
+    "\n",
+    "- YOLOV8 X (w/ Lion) 640 coco weights, log class weights, norm layers frozen 12e-5 lr, batch size 8: 1000/27926: loss: 0.887, accuracy: 0.0611\n",
+    "- YOLOV8 X (w/ Lion) 640 coco weights, log class weights, norm layers frozen 12e-5 lr, batch size 8: 2000/27926: loss: 0.87, accuracy: 0.07\n",
+    "- YOLOV8 X (w/ Lion) 640 coco weights, log class weights, norm layers frozen 12e-5 lr, batch size 8: 14000/27926: loss: 0.84, accuracy: 0.0763\n",
+    "\n",
+    "- Old convnet: 13300/55853, loss: 0.3006, accuracy: 0.2011"
    ]
   },
   {
