Adding average grad cam code for aggregating multiple convolutional layers

--- a/notebooks/Model_Training_with_Attention.ipynb
+++ b/notebooks/Model_Training_with_Attention.ipynb
@@ -63,10 +63,12 @@
     "- EfficientNetV2M\n",
     "- VOLO\n",
     "- **Dino v2 base and large (base weights are downloaded)\n",
+    "- **EfficientNetV1B7\n",
     "\n",
     "### Try using object detection pretrained model\n",
     "\n",
-    "- YOLO"
+    "- YOLO\n",
+    "- **EfficientDetD7"
    ]
   },
   {
@@ -1021,7 +1023,7 @@
     "# # Note: these were used to train YOLOV8 X6\n",
     "transfer_layer_name = 'tf.concat_45'\n",
     "transfer_layer = model.get_layer(transfer_layer_name)\n",
-    "freeze_layer_name = 'head_4_cls_3_conv'"
+    "freeze_layer_name = 'head_4_cls_3_conv' # Also try going back to this layer: head_4_cls_2_swish"
    ]
   },
   {
@@ -1494,9 +1496,9 @@
     "- MaxViT Base (w/ Lion) 512 imagenet21k weights, log class weights, norm layers frozen 3e-5 lr: 3000/55853: loss: 1.0627, accuracy: 0.0976\n",
     "- MaxViT Base (w/ Lion) 512 imagenet21k weights, log class weights, norm layers unfrozen 1e-5 lr: 4000/74471: loss: 1.4759, accuracy: 0.1263\n",
     "\n",
-    "- YOLOV8 X (w/ Lion) 640 coco weights, log class weights, norm layers frozen 12e-5 lr, batch size 8: 1000/27926: loss: 0.887, accuracy: 0.0611\n",
-    "- YOLOV8 X (w/ Lion) 640 coco weights, log class weights, norm layers frozen 12e-5 lr, batch size 8: 2000/27926: loss: 0.87, accuracy: 0.07\n",
-    "- YOLOV8 X (w/ Lion) 640 coco weights, log class weights, norm layers frozen 12e-5 lr, batch size 8: 14000/27926: loss: 0.84, accuracy: 0.0763\n",
+    "- YOLOV8 X6 (w/ Lion) 640 coco weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 500/27926: loss: 1.54, accuracy: 0.13\n",
+    "- YOLOV8 X6 (w/ Lion) 640 coco weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 2000/27926: loss: 1.476, accuracy: 0.1345\n",
+    "- YOLOV8 X6 (w/ Lion) 640 coco weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 5500/27926: loss: 1.335, accuracy: 0.141 \n",
     "\n",
     "- Old convnet: 13300/55853, loss: 0.3006, accuracy: 0.2011"
    ]
