Pulling Lion optimizer out of the notebook into script

--- a/notebooks/Model_Training.ipynb
+++ b/notebooks/Model_Training.ipynb
@@ -45,7 +45,8 @@
     "\n",
     "from typing import List\n",
     "\n",
-    "from data_preparation import prepare_data"
+    "from data_preparation import prepare_data\n",
+    "from model_utils import Lion"
    ]
   },
   {
@@ -1473,8 +1474,10 @@
     "#     tf.keras.callbacks.EarlyStopping(patience=10),\n",
     "#     WarmUpLearningRateScheduler(warmup_epochs=3, init_lr=1e-5)\n",
     "]\n",
+    "\n",
     "model.compile(\n",
-    "    optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule),\n",
+    "#     optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule),\n",
+    "    optimizer=Lion(learning_rate=lr_schedule),\n",
     "    loss=\"binary_crossentropy\",\n",
     "    metrics=[\"accuracy\"],\n",
     ")\n",
