--- a/notebooks/Model_Training_with_Attention.ipynb
+++ b/notebooks/Model_Training_with_Attention.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -50,7 +50,8 @@
     "\n",
     "from typing import List\n",
     "\n",
-    "from data_preparation import prepare_data"
+    "from data_preparation import prepare_data\n",
+    "from model_utils import Lion"
    ]
   },
   {
@@ -64,6 +65,7 @@
     "- VOLO\n",
     "- **Dino v2 base and large (base weights are downloaded)\n",
     "- **EfficientNetV1B7\n",
+    "- TinyViT (or small convnext model) on 1024 x 1024 (without pretrained weights)\n",
     "\n",
     "### Try using object detection pretrained model\n",
     "\n",
@@ -80,16 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to initialize NVML: Unknown Error\r\n"
+     ]
+    }
+   ],
    "source": [
     "!nvidia-smi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -844,8 +854,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_BASE_NAME = 'yolov8_x6'\n",
-    "MODEL_NAME = f'{MODEL_BASE_NAME}_coco.h5'\n",
+    "MODEL_BASE_NAME = 'tiny_vit_21m_512_imagenet21k-ft1k'\n",
+    "MODEL_NAME = f'{MODEL_BASE_NAME}.h5'\n",
     "model_path = f'../models/{MODEL_NAME}'\n",
     "model = tf.keras.models.load_model(model_path)"
    ]
@@ -1021,9 +1031,33 @@
    "outputs": [],
    "source": [
     "# # Note: these were used to train YOLOV8 X6\n",
-    "transfer_layer_name = 'tf.concat_45'\n",
+    "# transfer_layer_name = 'tf.concat_45'\n",
+    "# transfer_layer = model.get_layer(transfer_layer_name)\n",
+    "# freeze_layer_name = 'head_4_cls_3_conv' # Also try going back to this layer: head_4_cls_2_swish"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Note: these were used to train efficientnetv1-b7-noisy_student\n",
+    "# transfer_layer_name = 'post_swish'\n",
+    "# transfer_layer = model.get_layer(transfer_layer_name)\n",
+    "# freeze_layer_name = 'post_swish' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Note: these were used to train tiny vit\n",
+    "transfer_layer_name = 'stack4_block2_mlp_output'\n",
     "transfer_layer = model.get_layer(transfer_layer_name)\n",
-    "freeze_layer_name = 'head_4_cls_3_conv' # Also try going back to this layer: head_4_cls_2_swish"
+    "freeze_layer_name = 'stack4_block2_mlp_output' "
    ]
   },
   {
@@ -1255,8 +1289,8 @@
    },
    "outputs": [],
    "source": [
-    "# model = build_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)\n",
-    "model = build_yolo_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)"
+    "model = build_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)\n",
+    "# model = build_yolo_model(base_model=conv_model, num_classes=num_classes, dropout_rate=0.3)"
    ]
   },
   {
@@ -1317,93 +1351,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class Lion(tf.keras.optimizers.legacy.Optimizer):\n",
-    "  r\"\"\"Optimizer that implements the Lion algorithm.\"\"\"\n",
-    "\n",
-    "  def __init__(self,\n",
-    "               learning_rate=0.0001,\n",
-    "               beta_1=0.9,\n",
-    "               beta_2=0.99,\n",
-    "               wd=0,\n",
-    "               name='lion',\n",
-    "               **kwargs):\n",
-    "    \"\"\"Construct a new Lion optimizer.\"\"\"\n",
-    "\n",
-    "    super(Lion, self).__init__(name, **kwargs)\n",
-    "    self._set_hyper('learning_rate', kwargs.get('lr', learning_rate))\n",
-    "    self._set_hyper('beta_1', beta_1)\n",
-    "    self._set_hyper('beta_2', beta_2)\n",
-    "    self._set_hyper('wd', wd)\n",
-    "\n",
-    "  def _create_slots(self, var_list):\n",
-    "    # Create slots for the first and second moments.\n",
-    "    # Separate for-loops to respect the ordering of slot variables from v1.\n",
-    "    for var in var_list:\n",
-    "      self.add_slot(var, 'm')\n",
-    "\n",
-    "  def _prepare_local(self, var_device, var_dtype, apply_state):\n",
-    "    super(Lion, self)._prepare_local(var_device, var_dtype, apply_state)\n",
-    "\n",
-    "    beta_1_t = tf.identity(self._get_hyper('beta_1', var_dtype))\n",
-    "    beta_2_t = tf.identity(self._get_hyper('beta_2', var_dtype))\n",
-    "    wd_t = tf.identity(self._get_hyper('wd', var_dtype))\n",
-    "    lr = apply_state[(var_device, var_dtype)]['lr_t']\n",
-    "    apply_state[(var_device, var_dtype)].update(\n",
-    "        dict(\n",
-    "            lr=lr,\n",
-    "            beta_1_t=beta_1_t,\n",
-    "            one_minus_beta_1_t=1 - beta_1_t,\n",
-    "            beta_2_t=beta_2_t,\n",
-    "            one_minus_beta_2_t=1 - beta_2_t,\n",
-    "            wd_t=wd_t))\n",
-    "\n",
-    "  @tf.function(jit_compile=True)\n",
-    "  def _resource_apply_dense(self, grad, var, apply_state=None):\n",
-    "    var_device, var_dtype = var.device, var.dtype.base_dtype\n",
-    "    coefficients = ((apply_state or {}).get((var_device, var_dtype)) or\n",
-    "                    self._fallback_apply_state(var_device, var_dtype))\n",
-    "\n",
-    "    m = self.get_slot(var, 'm')\n",
-    "    var_t = var.assign_sub(\n",
-    "        coefficients['lr_t'] *\n",
-    "        (tf.math.sign(m * coefficients['beta_1_t'] +\n",
-    "                      grad * coefficients['one_minus_beta_1_t']) +\n",
-    "         var * coefficients['wd_t']))\n",
-    "    with tf.control_dependencies([var_t]):\n",
-    "      m.assign(m * coefficients['beta_2_t'] +\n",
-    "               grad * coefficients['one_minus_beta_2_t'])\n",
-    "\n",
-    "  @tf.function(jit_compile=True)\n",
-    "  def _resource_apply_sparse(self, grad, var, indices, apply_state=None):\n",
-    "    var_device, var_dtype = var.device, var.dtype.base_dtype\n",
-    "    coefficients = ((apply_state or {}).get((var_device, var_dtype)) or\n",
-    "                    self._fallback_apply_state(var_device, var_dtype))\n",
-    "\n",
-    "    m = self.get_slot(var, 'm')\n",
-    "    m_t = m.assign(m * coefficients['beta_1_t'])\n",
-    "    m_scaled_g_values = grad * coefficients['one_minus_beta_1_t']\n",
-    "    m_t = m_t.scatter_add(tf.IndexedSlices(m_scaled_g_values, indices))\n",
-    "    var_t = var.assign_sub(coefficients['lr'] *\n",
-    "                           (tf.math.sign(m_t) + var * coefficients['wd_t']))\n",
-    "\n",
-    "    with tf.control_dependencies([var_t]):\n",
-    "      m_t = m_t.scatter_add(tf.IndexedSlices(-m_scaled_g_values, indices))\n",
-    "      m_t = m_t.assign(m_t * coefficients['beta_2_t'] /\n",
-    "                       coefficients['beta_1_t'])\n",
-    "      m_scaled_g_values = grad * coefficients['one_minus_beta_2_t']\n",
-    "      m_t.scatter_add(tf.IndexedSlices(m_scaled_g_values, indices))\n",
-    "\n",
-    "  def get_config(self):\n",
-    "    config = super(Lion, self).get_config()\n",
-    "    config.update({\n",
-    "        'learning_rate': self._serialize_hyperparameter('learning_rate'),\n",
-    "        'beta_1': self._serialize_hyperparameter('beta_1'),\n",
-    "        'beta_2': self._serialize_hyperparameter('beta_2'),\n",
-    "        'wd': self._serialize_hyperparameter('wd'),\n",
-    "    })\n",
-    "    return config"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1418,7 +1366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 8"
+    "batch_size = 16"
    ]
   },
   {
@@ -1430,7 +1378,7 @@
     "lr_schedule = keras.optimizers.schedules.CosineDecayRestarts(\n",
     "      # initial_learning_rate=3e-3, # for uniform weighting\n",
     "      # initial_learning_rate=3e-4, # for sqrt weighting \n",
-    "      initial_learning_rate=2e-5, # lower learning rate for Lion optimizer\n",
+    "      initial_learning_rate=1e-5, # lower learning rate for Lion optimizer\n",
     "      first_decay_steps=int(NUM_TRAIN/ (7 * batch_size)))"
    ]
   },
@@ -1455,7 +1403,7 @@
    "outputs": [],
    "source": [
     "epochs = 10\n",
-    "model_path='../models/pretrain_model_yolov8_x6_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
+    "model_path='../models/pretrain_model_tiny_vit_21m_512_imagenet21k-ft1k_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
     "\n",
     "callbacks = [\n",
     "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=False),\n",
@@ -1499,6 +1447,14 @@
     "- YOLOV8 X6 (w/ Lion) 640 coco weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 500/27926: loss: 1.54, accuracy: 0.13\n",
     "- YOLOV8 X6 (w/ Lion) 640 coco weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 2000/27926: loss: 1.476, accuracy: 0.1345\n",
     "- YOLOV8 X6 (w/ Lion) 640 coco weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 5500/27926: loss: 1.335, accuracy: 0.141 \n",
+    "\n",
+    "- EfficientNet B7 (w/ Lion) 600 imagenet weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 500/27926: loss: 0.953, accuracy: 0.028\n",
+    "- EfficientNet B7 (w/ Lion) 600 imagenet weights, log class weights, norm layers frozen 2e-5 lr, batch size 8: 2000/27926: loss: 0.904, accuracy: 0.031\n",
+    "\n",
+    "- TinyViT (w/ Lion) 512 imagenet21k weights, log class weights, norm layers frozen 1e-5 lr, batch size 16: 340/13963: loss: 0.941, accuracy: 0.0339\n",
+    "- TinyViT (w/ Lion) 512 imagenet21k weights, log class weights, norm layers frozen 1e-5 lr, batch size 16: 800/13963: loss: 0.88, accuracy: 0.056\n",
+    "- TinyViT (w/ Lion) 512 imagenet21k weights, log class weights, norm layers frozen 1e-5 lr, batch size 16: 2700/13963: loss: 0.828, accuracy: 0.108\n",
+    "- TinyViT (w/ Lion) 512 imagenet21k weights, log class weights, norm layers frozen 1e-5 lr, batch size 16: 4000/13963: loss: 0.8113, accuracy: 0.1215\n",
     "\n",
     "- Old convnet: 13300/55853, loss: 0.3006, accuracy: 0.2011"
    ]
