--- a/notebooks/model_analysis.ipynb
+++ b/notebooks/model_analysis.ipynb
@@ -89,9 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = 'pretrain_model_ConvNeXtBase_w_ClssWgt_13-0.7417.h5'\n",
+    "MODEL_NAME = 'pretrain_model_tiny_vit_21m_512_imagenet21k-ft1k_w_ClssWgt_01-0.4044.h5'\n",
     "model_path = f'../models/{MODEL_NAME}'\n",
-    "model = tf.keras.models.load_model(model_path, custom_objects={'LayerScale': LayerScale})"
+    "model = tf.keras.models.load_model(model_path, custom_objects={'LayerScale': LayerScale})\n",
+    "# model = tf.keras.models.load_model(model_path)"
    ]
   },
   {
